- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.10923                                -
---------------------------------------------
- 2021-05-20                                -
---------------------------------------------
.: WSM: Task - Retrieve user details to place order + save inserted details (WSW-115)

---------------------------------------------
- 2021-05-20                                -
---------------------------------------------
.: WSM: Task - Back button to close image modal (WSM-365)
.: WSM: Task - Change create order quantity input to button (WSM-338)
.: WSM: Task - Fix QRcode in production (WSM-370)

---------------------------------------------
- 2021-05-19                                -
---------------------------------------------
.: WSM: BugFix - Encode category name  (WSM-363)
.: WSM: BugFix - Promotion in invoice is not able to remove (WSM-356)
.: WSM: BugFix - Promotion with empty value (WSM-351)
.: WSM: Task - Open Completion Date in ORder and it will focus on the selected Date (WSM-354)

- v1.0.10922                                -
---------------------------------------------
- 2021-05-17                                -
---------------------------------------------
.: WSM: Task - Improvement: Profile images for item (WSM-367)
.: WSM: Task - Update scrollbar in store page (WSM-369)

- v1.0.10921                                -
---------------------------------------------
- 2021-05-10                                -
---------------------------------------------
.: WSM: Task: Navigation to all invoices (WSM-345)
.: WSM: Task: Start up wizard to start the invoice feature (WSM-344)

- v1.0.1092                                 -
---------------------------------------------
- 2021-05-09                                -
---------------------------------------------
.: WSM: Task: Group completed invoices (WSM-339)

---------------------------------------------