@@ -9,25 +9,25 @@
 <div class="w-100 mb-5" style="z-index: 1; overflow-x: auto;">
     <table class="table table-hover w-100 font-9">
         <thead>
+            <th style="white-space: nowrap" class="text-center" width="100">Enabled</th>
             <th style="white-space: nowrap">Title</th>
             <th style="white-space: nowrap" width="180">Type</th>
             <th style="white-space: nowrap" width="180">Value</th>
             <th style="white-space: nowrap" width="180">Active Date</th>
             <th style="white-space: nowrap" width="180">Expiry Date</th>
-            <th style="white-space: nowrap" class="text-center" width="150">Enable</th>
             <th style="white-space: nowrap" width="100">Actions</th>
         </thead>
         <tbody *ngIf="!loading.isRunning()">
             <tr *ngFor="let promotion of promotions">
+                <td style="white-space: nowrap" class="text-center">
+                    <span *ngIf="isExpired(promotion)" class="fas fa-times-circle text-danger"></span>
+                    <span *ngIf="!isExpired(promotion)" class="fas fa-check-circle" [ngClass]="promotion.isEnabled ? 'text-success': 'text-muted'"></span>
+                </td>
                 <td style="white-space: nowrap">{{ promotion.title }}</td>
                 <td style="white-space: nowrap">{{ promotion.option == 'fixed_amount' ? 'Fixed Amount' : 'Percentage' }}</td>
                 <td style="white-space: nowrap">{{ promotion.value | number:'1.2-2' | wsEmptyDash }} {{ promotion.option == 'percentage' ? '%' : ''}}</td>
                 <td style="white-space: nowrap">{{ promotion.activeDate | date: 'MMM d, y' | wsEmptyDash }}</td>
                 <td style="white-space: nowrap">{{ promotion.expiryDate | date: 'MMM d, y' | wsEmptyDash }}</td>
-                <td style="white-space: nowrap" class="text-center">
-                    <span *ngIf="isExpired(promotion)" class="fas fa-times-circle text-danger"></span>
-                    <span *ngIf="!isExpired(promotion)" class="fas fa-check-circle" [ngClass]="promotion.isEnabled ? 'text-success': 'text-muted'"></span>
-                </td>
                 <td style="white-space: nowrap">
                     <button [disabled]="itemLoading.isRunning()" title="Edit Item" href="javascript:void(0)" class="ws-dark-color btn btn-sm btn-controller text-decoration-none" (click)="$event.stopPropagation(); openModifyPromotionModal(promotion)">
                         <span class="fas fa-edit"></span>
