@@ -1,5 +1,6 @@
 export class Delivery {
     _id: string;
+    isEnabled: boolean = true;
     name: Array<string>;
     fee: number;
 }
