@@ -7,6 +7,7 @@
 - 2021-05-20                                -
 ---------------------------------------------
 .: WSM: Task - Retrieve user details to place order + save inserted details (WSW-115)
+.: WSM: Task - Decided whether want to show the selected delivery item (WSM-366)
 
 ---------------------------------------------
 - 2021-05-20                                -
